// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-form-section spec: Render logic -> should render a form section with a default button of \`Submit\` 1`] = `
<amplify-form-section>
  <mock:shadow-root>
    <form>
      <amplify-section>
        <div>
          <slot name="amplify-form-section-header">
            <div class="form-section-header">
              <h3 data-test="form-section-header-section"></h3>
            </div>
          </slot>
        </div>
        <slot></slot>
        <div>
          <slot name="amplify-form-section-footer">
            <div class="form-section-footer">
              <amplify-button data-test="form-section-form-section-button" type="submit">
                <amplify-loading-spinner style="display: none;"></amplify-loading-spinner>
                <span style="display: initial;">
                  Submit
                </span>
              </amplify-button>
            </div>
          </slot>
        </div>
      </amplify-section>
    </form>
  </mock:shadow-root>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render a form section with a submit button text of \`Go\` 1`] = `
<amplify-form-section submit-button-text="Go">
  <mock:shadow-root>
    <form>
      <amplify-section>
        <div>
          <slot name="amplify-form-section-header">
            <div class="form-section-header">
              <h3 data-test="form-section-header-section"></h3>
            </div>
          </slot>
        </div>
        <slot></slot>
        <div>
          <slot name="amplify-form-section-footer">
            <div class="form-section-footer">
              <amplify-button data-test="form-section-form-section-button" type="submit">
                <amplify-loading-spinner style="display: none;"></amplify-loading-spinner>
                <span style="display: initial;">
                  Go
                </span>
              </amplify-button>
            </div>
          </slot>
        </div>
      </amplify-section>
    </form>
  </mock:shadow-root>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render form section 1`] = `
<amplify-form-section>
  <mock:shadow-root>
    <form>
      <amplify-section>
        <div>
          <slot name="amplify-form-section-header">
            <div class="form-section-header">
              <h3 data-test="form-section-header-section"></h3>
            </div>
          </slot>
        </div>
        <slot></slot>
        <div>
          <slot name="amplify-form-section-footer">
            <div class="form-section-footer">
              <amplify-button data-test="form-section-form-section-button" type="submit">
                <amplify-loading-spinner style="display: none;"></amplify-loading-spinner>
                <span style="display: initial;">
                  Submit
                </span>
              </amplify-button>
            </div>
          </slot>
        </div>
      </amplify-section>
    </form>
  </mock:shadow-root>
</amplify-form-section>
`;
